; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_acl.c_btm_acl_report_role_change.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_acl.c_btm_acl_report_role_change.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32 (%struct.TYPE_9__*)*, %struct.TYPE_10__ }
%struct.TYPE_9__ = type { i32 }
%struct.TYPE_10__ = type { i32 }

@.str = private unnamed_addr constant [28 x i8] c"btm_acl_report_role_change\0A\00", align 1
@btm_cb = common dso_local global %struct.TYPE_11__ zeroinitializer, align 8
@BD_ADDR_LEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @btm_acl_report_role_change(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_9__, align 4
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  %6 = call i32 @BTM_TRACE_DEBUG(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  %7 = load i32 (%struct.TYPE_9__*)*, i32 (%struct.TYPE_9__*)** getelementptr inbounds (%struct.TYPE_11__, %struct.TYPE_11__* @btm_cb, i32 0, i32 0, i32 0), align 8
  %8 = icmp ne i32 (%struct.TYPE_9__*)* %7, null
  br i1 %8, label %9, label %25

9:                                                ; preds = %2
  %10 = load i64, i64* %4, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %25

12:                                               ; preds = %9
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_11__, %struct.TYPE_11__* @btm_cb, i32 0, i32 0, i32 1, i32 0), align 8
  %14 = load i64, i64* %4, align 8
  %15 = load i32, i32* @BD_ADDR_LEN, align 4
  %16 = call i64 @memcmp(i32 %13, i64 %14, i32 %15)
  %17 = icmp eq i64 0, %16
  br i1 %17, label %18, label %25

18:                                               ; preds = %12
  %19 = call i32 @memcpy(%struct.TYPE_9__* %5, %struct.TYPE_10__* getelementptr inbounds (%struct.TYPE_11__, %struct.TYPE_11__* @btm_cb, i32 0, i32 0, i32 1), i32 4)
  %20 = load i32, i32* %3, align 4
  %21 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %5, i32 0, i32 0
  store i32 %20, i32* %21, align 4
  %22 = load i32 (%struct.TYPE_9__*)*, i32 (%struct.TYPE_9__*)** getelementptr inbounds (%struct.TYPE_11__, %struct.TYPE_11__* @btm_cb, i32 0, i32 0, i32 0), align 8
  %23 = call i32 %22(%struct.TYPE_9__* %5)
  %24 = call i32 @memset(%struct.TYPE_10__* getelementptr inbounds (%struct.TYPE_11__, %struct.TYPE_11__* @btm_cb, i32 0, i32 0, i32 1), i32 0, i32 4)
  store i32 (%struct.TYPE_9__*)* null, i32 (%struct.TYPE_9__*)** getelementptr inbounds (%struct.TYPE_11__, %struct.TYPE_11__* @btm_cb, i32 0, i32 0, i32 0), align 8
  br label %25

25:                                               ; preds = %18, %12, %9, %2
  ret void
}

declare dso_local i32 @BTM_TRACE_DEBUG(i8*) #1

declare dso_local i64 @memcmp(i32, i64, i32) #1

declare dso_local i32 @memcpy(%struct.TYPE_9__*, %struct.TYPE_10__*, i32) #1

declare dso_local i32 @memset(%struct.TYPE_10__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
